--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "0.1",
 
   "permissions": [
-    
+    "tabs", "http://kbx.local:8000/"
   ],
   "browser_action": {
     "default_icon": "icon.png",
