--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,9 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["api.js", "background.js"],
+    "persistent": false
   }
 }
